# cica

./: .gitignore  Cargo.toml  README.md
src/: claude.rs  config.rs  main.rs  onboarding.rs  pairing.rs  setup.rs  skills.rs
src/backends/: claude.rs  cursor.rs  mod.rs
src/channels/: mod.rs  signal.rs  slack.rs  telegram.rs
src/cmd/: approve.rs  init.rs  mod.rs  paths.rs  run.rs
src/cron/: clock.rs  mod.rs  schedule.rs  store.rs
