[package]
name = "cica"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Telegram bot
teloxide = { version = "0.13", features = ["macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Platform directories (XDG, etc.)
directories = "6"

# CLI
clap = { version = "4", features = ["derive"] }

# Interactive prompts
dialoguer = "0.11"

# HTTP client for downloads
reqwest = { version = "0.12", features = ["stream"] }

# Archive extraction
flate2 = "1"
tar = "0.4"
zip = "2"

# Command lookup
which = "7"

# JSON-RPC client (for signal-cli)
jsonrpsee = { version = "0.24", features = ["async-client", "http-client"] }
