[package]
name = "cica"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Telegram bot
teloxide = { version = "0.13", features = ["macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

# Platform directories (XDG, etc.)
directories = "6"

# CLI
clap = { version = "4", features = ["derive"] }

# Interactive prompts
dialoguer = "0.11"

# HTTP client for downloads
reqwest = { version = "0.12", features = ["stream"] }

# Archive extraction
flate2 = "1"
tar = "0.4"
zip = "2"

# Command lookup
which = "7"

# JSON-RPC client (for signal-cli)
jsonrpsee = { version = "0.24", features = ["async-client", "http-client"] }

# Vector embeddings (local ONNX inference)
fastembed = "5"

# SQLite with vector search
rusqlite = { version = "0.32", features = ["bundled"] }
sqlite-vec = "0.1.7-alpha.2"

# For zero-copy vector conversion
zerocopy = { version = "0.8", features = ["derive"] }

# Cron job scheduling
croner = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
